2006-05-31  Alex Roitman  <shura@gramps-project.org>
	* src/Selectors/_SelectPerson.py (__init__): take track argument.
	* src/Editors/_EditFamily.py: Adapt to SelectPerson change.
	* src/Editors/_EditPersonRef.py (_select_person): Adapt to
	SelectPerson change.
	* src/ReportBase/_BareReportDialog.py: Use dbstata and uistate,
	convert to Managed window.
	* src/ReportBase/_ReportDialog.py: Use dbstate and uistate.
	* src/ReportBase/_DrawReportDialog.py: Use dbstate and uistate.
	* src/ReportBase/_TextReportDialog.py: Use dbstate and uistate.
	* src/ViewManager.py (make_report_callback): Use dbstate and uistate.

2006-05-30  Don Allingham  <don@gramps-project.org>
	* src/plugins/FilterEditor.py: start to bring into sync with
	code changes

2006-05-30  Alex Roitman  <shura@gramps-project.org>
	* various: break Report into a package.

2006-05-29  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: insert name keys for indexing.
	* src/plugins/DetAncestralReport.py: insert name keys for indexing.
	* src/plugins/FamilyGroup.py: print descriptions for events.
	* src/PluginUtils/_ReportUtils.py: handle no person error

2006-05-29  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* configure.in: Set up for 2.1.5.

2006-05-28  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (stop_event): Properly import birth and
	death from the old XML.
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* src/plugins/Verify.py: Add double-clicking and mark/unmark/invert.
	* src/plugins/verify.glade: Add label.

2006-05-28  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenOfficeDoc.py: Allow large cells to span pages (bug 0000165)
	* src/BaseDoc.py: Add key to write_text.
	* src/docgen/*: Add key to write_text.
	* src/PluginUtils/_ReportUtils.py: Add get_name_key.
	* src/plugins/FamilyGroup.py: insert name keys for indexing.